# jd

./: .gitignore  .taurignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example
.claude/: settings.json
.claude/commands/: build.md  check.md  mcp-server.md  sync-and-search.md  test.md
.claude/hooks/: check-documentation.sh  stop-checks.sh  update-schema-skill.sh
.claude/skills/: architecture.md  database-schema.md  development.md  documentation.md  patterns.md
.github/workflows/: mock-server.yml
chrome-extension/: .gitignore  README.md  build.js  manifest.json  offscreen.html  options.html  package-lock.json  package.json  popup.html  sidepanel.html  tsconfig.json
chrome-extension/public/icons/: README.md  generate-icons.html
chrome-extension/scripts/: generate-icons.js
chrome-extension/src/background/: index.ts
chrome-extension/src/lib/: ai-instructions.ts  claude-code.ts  database.ts  jira-client.ts  settings.ts  sync-service.ts  types.ts
chrome-extension/src/offscreen/: index.ts
chrome-extension/src/options/: options.ts
cicd/deploy/: README.md  deploy-web.sh  deploy.sh  docker-compose.yml
crates/jira-db-api/: Cargo.toml
crates/jira-db-api/src/: error.rs  main.rs  state.rs
crates/jira-db-api/src/handlers/: config.rs  embeddings.rs  issues.rs  metadata.rs  mod.rs  projects.rs  reports.rs  sync.rs
crates/jira-db-cli/: Cargo.toml
crates/jira-db-cli/src/: main.rs
crates/jira-db-cli/src/cli/: commands.rs  handlers.rs  mod.rs
crates/jira-db-core/: Cargo.toml
crates/jira-db-core/src/: lib.rs
crates/jira-db-core/src/application/: mod.rs
crates/jira-db-core/src/application/dto/: mod.rs  sync_result.rs  transition.rs
crates/jira-db-core/src/application/services/: jira_service.rs  mod.rs
crates/jira-db-core/src/application/use_cases/: create_test_ticket.rs  execute_sql.rs  generate_ai_test_data.rs  generate_embeddings.rs  generate_report.rs  generate_snapshots.rs  get_change_history.rs  get_project_metadata.rs  mod.rs  search_issues.rs  sync_fields.rs  sync_logger.rs  sync_project.rs  sync_project_list.rs  sync_tests.rs  transition_issue.rs
crates/jira-db-core/src/domain/: error.rs
crates/jira-db-core/src/domain/entities/: field.rs  issue.rs  issue_snapshot.rs  metadata.rs  mod.rs
crates/jira-db-core/src/domain/repositories/: issue_repository.rs  issue_snapshot_repository.rs  metadata_repository.rs  mod.rs  project_repository.rs  sync_history_repository.rs
crates/jira-db-core/src/infrastructure/: mod.rs
crates/jira-db-core/src/infrastructure/config/: mod.rs  settings.rs
crates/jira-db-core/src/infrastructure/database/: connection.rs  mod.rs  schema.rs
crates/jira-db-core/src/infrastructure/database/repositories/: change_history_repository.rs  embeddings_repository.rs  field_repository.rs  issue_repository.rs  issue_snapshot_repository.rs  issues_expanded_repository.rs  metadata_repository.rs  mod.rs  project_repository.rs  raw_data_repository.rs  sync_history_repository.rs
crates/jira-db-core/src/report/: mod.rs  static_report.rs
crates/jira-db-core/src/report/interactive/: css.rs  mod.rs
crates/jira-db-mcp/: Cargo.toml
crates/jira-db-mcp/src/: config.rs  main.rs  server.rs
crates/jira-db-mcp/src/handlers/: initialize.rs  mod.rs  tools.rs
crates/jira-db-mcp/src/protocol/: error.rs  jsonrpc.rs  mcp_types.rs  mod.rs
crates/jira-db-mcp/src/tools/: implementations.rs  mod.rs  params.rs  registry.rs
crates/jira-db-mcp/src/transport/: http.rs  mod.rs  stdio.rs  traits.rs
crates/jira-db-service/: Cargo.toml
crates/jira-db-service/src/: error.rs  lib.rs  state.rs  types.rs
crates/jira-db-service/src/services/: config.rs  embeddings.rs  issues.rs  metadata.rs  mod.rs  projects.rs  reports.rs  sql.rs  sync.rs
crates/jira-db-tauri/: README.md  angular.json  package-lock.json  package.json
crates/jira-db-tauri/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
crates/jira-db-tauri/src-tauri/capabilities/: default.json
crates/jira-db-tauri/src-tauri/icons/: icon.icns
crates/jira-db-tauri/src-tauri/src/: lib.rs  logging.rs  main.rs  state.rs
crates/jira-db-tauri/src-tauri/src/commands/: config.rs  database.rs  debug.rs  embeddings.rs  fields.rs  issues.rs  metadata.rs  mod.rs  projects.rs  reports.rs  sql.rs  sync.rs
crates/jira-db-web/: .gitignore  Cargo.toml
crates/jira-db-web/frontend/: .gitignore  angular.json  package-lock.json  package.json
crates/jira-db-web/frontend/src/app/: app.routes.ts  app.scss  app.ts
crates/jira-db-web/frontend/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.ts
crates/jira-db-web/frontend/src/app/pages/issues/: issues.component.ts
crates/jira-db-web/frontend/src/app/pages/projects/: projects.component.ts
crates/jira-db-web/frontend/src/app/pages/query/: query.component.scss  query.component.ts
crates/jira-db-web/frontend/src/app/pages/settings/: settings.component.ts
crates/jira-db-web/frontend/src/app/pages/sync/: sync.component.ts
crates/jira-db-web/frontend/src/app/pages/visualization/: visualization.component.scss  visualization.component.ts
crates/jira-db-web/src/: config.rs  error.rs  handlers.rs  main.rs
crates/jira-mock-server/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/jira-mock-server/scripts/: deploy.sh
crates/jira-mock-server/src/: data.rs  handlers.rs  main.rs
docs/: ARCHITECTURE.md  CHARTS.md  DEVELOPMENT.md  EMBEDDINGS.md  FEATURE_MATRIX.md  MCP.md  SYNC_ARCHITECTURE.md  plan.md  requirements.md  todo.md
docs/diagrams/: sync-flow.drawio
frontend/: angular.json  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  styles.scss
scripts/: README.md  build.sh  deploy.sh
src/: cli.rs  config.rs  db.rs  error.rs  jira.rs  main.rs  sync.rs
src/cli/: commands.rs
src/config/: settings.rs
src/db/: connection.rs  repository.rs  schema.rs
src/domain/: error.rs  mod.rs
src/jira/: client.rs  models.rs
src/presentation/: mod.rs
src/sync/: manager.rs
typespec/: .gitignore  main.tsp  package-lock.json  package.json  pnpm-workspace.yaml  tspconfig.yaml
(+105 files in other folders)
