[package]
name = "jira-db"
version = "0.1.0"
edition = "2024"

[dependencies]
jira-api = { git = "https://github.com/ysksm/jira-api" }
duckdb = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
