[workspace]
members = [
    "crates/jira-db-core",
    "crates/jira-db-cli",
    "crates/jira-db-mcp",
    "crates/jira-db-api",
]
resolver = "2"
default-members = ["crates/jira-db-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# JIRA API
jira-api = { git = "https://github.com/ysksm/jira-api" }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

# Database
duckdb = { version = "1.4.3", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
comfy-table = "7.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
