[workspace]
members = [
    "crates/jira-db-core",
    "crates/jira-db-cli",
    "crates/jira-db-mcp",
    "crates/jira-db-api",
    "crates/jira-db-service",
    "crates/jira-db-web",
    "crates/jira-db-tauri/src-tauri",
]
resolver = "2"
default-members = ["crates/jira-db-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# JIRA API
jira-api = { git = "https://github.com/ysksm/jira-api" }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

# Database
duckdb = { version = "1.4.3", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
comfy-table = "7.1"

# Configuration
toml = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"

# Tauri
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0" }
