[package]
name = "jira-db-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jira-db-api"
path = "src/main.rs"

[dependencies]
# Internal
jira-db-core = { path = "../jira-db-core" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI
clap.workspace = true
