[package]
name = "jira-db-core"
version.workspace = true
edition.workspace = true
description = "Core library for JIRA data synchronization to DuckDB"

[dependencies]
# JIRA API
jira-api.workspace = true
reqwest.workspace = true
base64.workspace = true

# Database
duckdb.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
chrono.workspace = true
log.workspace = true
indicatif.workspace = true
dirs.workspace = true
