[package]
name = "jira-db-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for JIRA database queries"

[[bin]]
name = "jira-db-mcp"
path = "src/main.rs"

[dependencies]
# Core library
jira-db-core = { path = "../jira-db-core" }

# MCP SDK
rmcp = { version = "0.12", features = [
    "server",
    "transport-io",
    "macros",
] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client for OpenAI API (for embeddings)
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema generation (for MCP tool parameters)
schemars = "0.8"

# DuckDB (for direct queries)
duckdb.workspace = true
