[package]
name = "jira-db-web"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jira-db-web"
path = "src/main.rs"

[dependencies]
# Internal
jira-db-core = { path = "../jira-db-core" }
jira-db-service = { path = "../jira-db-service" }

# Web framework
actix-web.workspace = true
actix-cors.workspace = true
actix-files.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/Time
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true

# CLI
clap.workspace = true

# Configuration
toml.workspace = true
